portfolio_front_end/src/scss/base/_utilities.scss
.debug-1{
    border: 1px solid red;
}

.debug-2{
    border: 1px solid blue;
}

.debug-3{
    border: 1px solid green;
}


.fixed-width {
    width: 192px; /* Set your desired fixed width */
  }

  @media only screen and (max-width: 768px) {
    .border-bottom-mobile {
        border-bottom: 1px solid var(--bs-border-color-light);
        border-radius: 0;
    }
  }

  .fade-enter {
    opacity: 0;
    transform: translateY(20px); /* Optional: slight movement from the bottom */
  }
  
  .fade-enter-active {
    opacity: 1;
    transform: translateY(0);
    transition: opacity 300ms ease-in-out, transform 300ms ease-in-out;
  }
  
  .fade-exit {
    opacity: 1;
  }
  
  .fade-exit-active {
    opacity: 0;
    transition: opacity 300ms ease-in-out;
  }

  html {
    scroll-behavior: smooth;
  }

